--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
     font-family: inter, sans-serif;
 }
 
+body{
+    background-color: #FFF7ED;
+
+}
 .navbar{
     display: flex;
     align-items: center;
