--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,10 @@ body{
     color: black;
 }
 
-.navbar h1{
+.navbar h1 a{
     font-weight: 900;
+    color: black;
+    text-decoration: none;
 }
 
 .hero{
