--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,12 @@ body{
     justify-content: space-between;
     padding: 2rem 2rem;
 }
+.navbar-links{
+    display: flex;
+    justify-content: space-between;
+    gap: 5%;
+}
 .navbar-links a{
-    margin-left: 1rem;
     text-decoration: none;
     color: black;
 }
@@ -42,14 +46,17 @@ body{
     flex-direction: column;
 }
 
-.hero button{
+.button{
     color: white;
     background-color: #FF8C38;
-    border-radius: 15px;
+    border-radius: 5px;
     border: none;
     padding: 0.5rem 0rem;
     font-weight: 700;
     margin-top: 1rem;
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
 }
 .hero p{
     margin-top: 1rem;
@@ -60,6 +67,7 @@ body{
     background-color: #252525;
     text-align: center;
     padding: 1rem 0;
+    margin-top: 1rem;
 }
 
 img{
@@ -90,4 +98,94 @@ img{
     font-weight: 700;
     border: none;
     border-radius: 10px;
+}
+
+.vans{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    gap: 34px;
+    margin-top: 57px;
+}
+.van-container {
+    padding-inline: 23px
+}
+.vans img{
+    border-radius: 5px;
+}
+
+.van-title a {
+    color: #161616;
+    text-decoration: none;    
+}
+
+.van-info p{
+    margin-bottom: 1rem;
+}
+
+.van-info-img{
+    margin: 1rem 0;
+}
+
+.van-info h2{
+    margin-top: 1rem;
+}
+
+
+
+.van-type {
+    height: 34px;
+    padding: 6px 26px;
+    font-style: normal;
+    font-weight: 500;
+    border: none;
+    border-radius: 5px;
+    background-color: #FFEAD0;
+    color: #4D4D4D;
+    transition: 200ms all cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.bold{
+    font-weight: 700;
+}
+
+.van-type:hover {
+    color: #FFEAD0;
+}
+
+.van-type:focus {
+    outline: none;
+}
+
+.van-type.selected {
+    color: #FFEAD0;
+}
+
+.van-type.simple:hover, .van-type.simple.selected {
+    background-color: #E17654;
+}
+
+.van-type.rugged:hover, .van-type.rugged.selected {
+    background-color: #115E59;
+}
+
+.van-type.luxury:hover, .van-type.luxury.selected {
+    background-color: #161616;
+}
+
+.van-type.clear-filters {
+    margin-left: -20px;
+    height: 34px;
+    padding: 6px 26px;
+    font-style: normal;
+    font-weight: 500;
+    border: none;
+    border-radius: 5px;
+    text-decoration: underline;
+    background-color: transparent;
+    color: #4D4D4D;
+}
+
+i[class*='van-type-'] {
+    padding: 7px 14px;
 }
