--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,7 @@ body{
     text-align: center;
     padding: 1rem 0;
     margin-top: 1rem;
+    
 }
 
 img{
@@ -189,3 +190,73 @@ img{
 i[class*='van-type-'] {
     padding: 7px 14px;
 }
+
+a{
+    color: black;
+    text-decoration: none;
+}
+
+.host-nav {
+    display: flex;
+    padding-inline: 23px
+
+}
+
+.host-nav a {
+    text-decoration: none;
+    color: #4D4D4D;
+    font-weight: 500;
+    padding: 5px 10px 0px 0px;
+}
+
+.host-nav a:hover {
+    color: #161616;
+    text-decoration: underline;
+    font-weight: 600;
+}
+
+.host-van{
+    background-color: white;
+    padding: 10px 20px;
+    margin: 10px 1rem;
+    border-radius: 5px;
+}
+
+.host-van2{
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin: 1rem 0
+}
+
+.host-van-flex{
+    display: flex;
+    align-items: center;
+    gap: 5%;
+}
+
+.host-van-flex div h3{
+    margin-top: 1rem;
+}
+
+
+.host-van-img{
+    height: 70px;
+}
+.host-van-img2{
+    height: 10rem;
+}
+
+.host-info-nav{
+    display: flex;
+    gap: 5%;
+    margin: 1rem 0;
+}
+
+.soft{
+    font-weight: 400;
+}
+.host-van-info h4{
+    margin: 1rem 0;
+}
+
